<resources>
    <string name="app_name">Annotation</string>
    <string name="feliz_aniver_rio">Feliz aniverário!!!!</string>
    <string name="icon_splash_description">Icone da aplicação, dois stick notes espetados por um alfinete</string>
    <string name="welcome">Bem-vindo ao Annotation</string>
    <string name="to_start_say_your_name">Para começar, nos diga seu nome</string>
    <string name="ilustration_description">Ilustração de bem-vindo</string>
    <string name="example_name">Ex: João</string>
    <string name="button_text_continue">Continuar</string>
    <string name="plus">+</string>
    <string name="button_text_save">Salvar</string>
    <string name="title_note">Título</string>
    <string name="content_note">Conteúdo</string>
    <string name="new_annotation">Nova anotação</string>
    <string name="descroption_back_button">Botão de voltar</string>
    <string name="edit_annotation">Editar anotação</string>
    <string name="dialog_delete_annotation">Deseja deletar essa anotação?</string>
    <string name="text_btn_save_alter">Salvar alteração</string>
    <string name="description_button_delete">Description Button Delete</string>
    <string name="view_annotations">Veja suas anotações</string>
    <string name="button_get_photo">Button</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>