<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Fragments.EditAnnotationFragment"
    android:background="@color/white"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/button_back_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/descroption_back_button"
                android:src="@drawable/icon_back"
                app:backgroundTint="#FFFFFF"
                app:elevation="0dp"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints,SpeakableTextPresentCheck"
                tools:layout_editor_absoluteY="0dp" />

            <TextView
                android:id="@+id/title_screen"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/regular"
                android:gravity="center"
                android:text="@string/edit_annotation"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/button_delete_notes"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toEndOf="@+id/button_back_edit"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/button_delete_notes"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_gravity="left"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/description_button_delete"
                android:src="@drawable/delete_notes"
                app:backgroundTint="#FFF"
                app:elevation="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteY="0dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <EditText
            android:id="@+id/edit_text_title"
            style="@style/input_style"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="10dp"
            android:hint="@string/title_note"
            android:maxLines="1" />

        <EditText
            android:id="@+id/edit_text_content"
            style="@style/input_style"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="20dp"
            android:gravity="start"
            android:hint="@string/content_note"
            android:padding="10dp"
            android:inputType="textMultiLine"
            />

        <TextView
            android:id="@+id/loacation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:fontFamily="@font/medium"
            android:paddingLeft="10dp"
            android:text=""
            android:textAlignment="center"
            android:textColor="#74767A"
            android:textSize="12dp" />


    </LinearLayout>

    <Button
        android:id="@+id/button_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="16dp"
        android:height="@dimen/margin_bottom_big"
        android:background="@drawable/button_bg"
        android:fontFamily="@font/bold"
        android:layout_gravity="bottom"
        android:text="@string/text_btn_save_alter"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</FrameLayout>